<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_hardware</name>
  <version>0.0.0</version>
  <description>drivers, tools and launch scripts for the physical hardware onboard; Only to be run separately from the simulation on a physical robot.</description>
  <maintainer email="63957587+rayferric@users.noreply.github.com">rayferric</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>libphidget22</depend> <!-- libphidget22 is required to build compasscal. -->
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>phidgets_spatial</exec_depend>
  <exec_depend>imu_tools</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>python-transforms3d-pip</exec_depend> <!-- required by nmea_navsat_driver -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
