<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_mapviz</name>
  <version>0.0.0</version>
  <description>configuration and launch files for MapViz</description>
  <maintainer email="63957587+rayferric@users.noreply.github.com">rayferric</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>mapviz</exec_depend>
  <exec_depend>mapviz_plugins</exec_depend>
  <exec_depend>tile_map</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
